--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,8 @@
     "include": ["./server/*"],
     "watchOptions": {
         "watchDirectory": "usefsevents"
+    },
+    "compilerOptions": {
+        "downlevelIteration": true,
     }
 }
