--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"morgan": "^1.10.0",
-		"socket.io": "^4.2.0"
+		"socket.io": "^4.2.0",
+		"typescript": "^4.4.3"
 	},
 	"devDependencies": {
 		"@types/morgan": "^1.9.3",
